Fixed navbar hamburger menu being blocked by scrollbar

--- a/app/frontend/app/globals.css
+++ b/app/frontend/app/globals.css
@@ -1841,6 +1841,10 @@ h3.information-sub-header {
 }
 
 @media (max-width: 1199px) {
+  body {
+    width: 100%;
+    margin-right: 0;
+  }
   .benchmark-table-tabs {
     padding: 2px 10px;
     font-size: 22px;
